Fixed backwards compatibility

--- a/packages/core/polyfill/runner.ejs
+++ b/packages/core/polyfill/runner.ejs
@@ -29,7 +29,7 @@
   root.$IMA.Runner = assign(
     {
       isEsVersion: false,
-      source: JSON.parse('#{source}'),
+      source: JSON.parse('#{$Source}'),
       scripts: [],
       loadedScripts: [],
       testSource: {
