--- a/packages/core/polyfill/runner.ejs
+++ b/packages/core/polyfill/runner.ejs
@@ -35,7 +35,7 @@
       testScripts: {
         scripts: [
           // es2018 env test scripts
-          'return typeof AbortController !== "undefined"'
+          'return typeof AbortController !== "undefined"',
           'return (() => { const o = { t: 1 }; return { ...o }; })() && (async () => ({}))() && !!Object.values',
         ],
         esScripts: [
